# Lanaya

./: .eslintrc.json  .prettierignore  CHANGE_LOG.md  LICENSE  README.md  README_CN.md  README_EN.md  UPDATE_LOG.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
.github/workflows/: ci.yml  pr.yml  release.yml  updater.yml
scripts/: aarch.mjs  publish.mjs  release.mjs  updatelog.mjs  updater.mjs
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: build.sh  icon.icns
src-tauri/migrations/: record.sql
src-tauri/src/: cmds.rs  main.rs  menu.rs
src-tauri/src/config/: common_config.rs  config.rs  draft.rs  mod.rs  tray.rs
src-tauri/src/core/: clipboard.rs  database.rs  handle.rs  mod.rs  search.rs  sysopt.rs  tray.rs  window_manager.rs
src-tauri/src/utils/: dirs.rs  dispatch_util.rs  hotkey_util.rs  img_util.rs  json_util.rs  log_print.rs  mod.rs  string_util.rs  time_util.rs  window_util.rs
src/components/: About.vue  BlankTemplate.vue  ClipBoardItem.vue  ClipBoardList.vue  HelloWorld.vue  HotKeyItem.vue  KeyMapBar.vue  Layout.vue  SearchBar.vue  TagGroup.vue  TitleBar.vue
src/components/child/clipboard/: SearchNoResult.vue
src/components/child/config/: HotKeyInput.vue  LeftSectionItem.vue  RightSectionAbout.vue  RightSectionCommonConfig.vue
src/components/child/config/base/: BaseSelect.vue  BaseSwitch.vue
src/config/: constants.js
src/i18n/: index.js
src/i18n/locales/: en.yaml  zh.yaml
src/locales/: zh.yaml
src/router/: router.js
src/service/: cmds.js  db.js  globalListener.js  msg.js  recordService.js  shortCutUtil.js  store.js  util.js  windowUtil.js
src/service/base/: db.js  record.sql
src/views/: About.vue  Config.vue  Main.vue
