[package]
name = "lanaya"
version = "0.0.1"
description = "a simple clipboard manager"
authors = ["churchTao"]
license = "Apache-2.0 license"
repository = "https://github.com/ChurchTao/Lanaya"
default-run = "lanaya"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.2", features = ["api-all", "macos-private-api", "system-tray"] }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }
auto-launch = "0.4"
once_cell = "1.17.0"
anyhow = "1.0"
parking_lot = "0.12.1"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/tauri-plugin-sql"
# tag = "v0.1.0" Not available yet
features = ["sqlite"] # or "postgres", or "mysql"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
