[package]
name = "lanaya"
version = "1.1.5"
description = "a simple clipboard manager"
authors = ["churchTao"]
license = "Apache-2.0 license"
repository = "https://github.com/ChurchTao/Lanaya"
default-run = "lanaya"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["global-shortcut-all", "macos-private-api", "notification-all", "os-all", "shell-open", "system-tray", "updater", "window-all"] }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }
auto-launch = "0.4"
once_cell = "1.17.0"
anyhow = "1.0"
parking_lot = "0.12.1"
dunce = "1.0.3"
rust-crypto = { version = "0.2.36" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4.23"
arboard = "3.2.1"
base64 = "0.21.0"
image = "0.24.5"
rdev = "0.5.2"
active-win-pos-rs = "0.7"
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
